add theme, enable to switch among themes, improve the UI, improve the organization folders

--- a/src/ui.html
+++ b/src/ui.html
@@ -1,28 +1,34 @@
-<label class="select__label" for="select-format">Choose the format:</label>
-<select class="select__menu" name="select-format" id="select-format">
-  <option value="javascript">Javascript</option>
-  <option value="json">JSON</option>
-  <option value="html">HTML</option>
-  <option value="markdown">Markdown</option>
-</select>
 
-<!-- <label class="select__label" for="select-theme">Choose the theme:</label>
-<select class="select__menu" name="select-theme" id="select-theme">
-  <option value="javascript">Javascript</option>
-  <option value="json">JSON</option>
-  <option value="html">HTML</option>
-</select> -->
+<div class="form">
+  <div class="field">
+    <label for="select-format">Choose the format:</label>
+    <select name="select-format" id="select-format">
+      <option value="javascript">Javascript</option>
+      <option value="json">JSON</option>
+      <option value="html">HTML</option>
+      <option value="markdown">Markdown</option>
+    </select>
+  </div>
+  <div class="field">
+    <label for="select-theme">Choose the theme:</label>
+    <select name="select-theme" id="select-theme">
+      <option value="atom-one-dark">Atom One Dark</option>
+      <option value="dracula">Dracula</option>
+    </select>
+  </div>
+</div>
 
-<div class="compare">
+<div class="divider"></div>
+
+<div class="compare" id="compare">
   <div class="original">
     <p>Original</p>
-    <pre><code class="plaintext" id="original-content">...</code></pre>
-
+    <pre><code id="original-content"></code></pre>
   </div>
   <div class="preview">
     <p>Preview</p>
-    <pre><code class="plaintext" id="preview-content">...</code></pre>
+    <pre><code id="preview-content"></code></pre>
   </div>
 </div>
-<button id="button-format" class='button button--secondary'>Format</button>
-<button id="button-apply" class='button button--primary'>Apply</button>
+<button id="button-format" class="button button--secondary">Format</button>
+<button id="button-apply" class="button button--primary">Apply</button>
