improve the UI, fix bug to select theme, add more a theme

--- a/src/ui.html
+++ b/src/ui.html
@@ -12,6 +12,7 @@
     <label for="select-theme">Choose the theme:</label>
     <select name="select-theme" id="select-theme">
       <option value="atom-one-dark">Atom One Dark</option>
+      <option value="default">Default</option>
       <option value="dracula">Dracula</option>
     </select>
   </div>
