--- a/src/ui.html
+++ b/src/ui.html
@@ -7,6 +7,7 @@
       <option value="json">JSON</option>
       <option value="html">HTML</option>
       <option value="markdown">Markdown</option>
+      <option value="typescript">Typescript</option>
     </select>
   </div>
   <div class="field">
