--- a/src/ui.html
+++ b/src/ui.html
@@ -37,6 +37,10 @@
   <div class="original">
     <p>Original</p>
     <pre><code id="original-content"></code></pre>
+    
+    <div id="original-error">
+      <pre><code></code></pre>
+    </div>
   </div>
   <div class="preview">
     <p>Preview</p>
