Added support to new languages and styles

--- a/src/ui.html
+++ b/src/ui.html
@@ -14,7 +14,12 @@
         <option value="scss">SCSS</option>
       </optgroup>
       <optgroup label="Scripting">
+        <option value="go">Go</option>
+        <option value="java">Java</option>
         <option value="javascript">Javascript</option>
+        <option value="kotlin">Kotlin</option>
+        <option value="python">Python</option>
+        <option value="ruby">Ruby</option>
         <option value="typescript">Typescript</option>
       </optgroup>
     </select>
