--- a/src/ui.html
+++ b/src/ui.html
@@ -68,5 +68,8 @@
     <pre><code id="preview-content"></code></pre>
   </div>
 </div>
-<button id="button-preview" class="button button--secondary">Preview</button>
-<button id="button-apply" class="button button--primary">Apply</button>
+<div class="buttons">
+  <button id="button-preview" class="button button--secondary">Preview</button>
+  <button id="button-apply" class="button button--primary">Apply</button>
+</div>
+
