--- a/src/ui.html
+++ b/src/ui.html
@@ -20,6 +20,7 @@
         <option value="kotlin">Kotlin</option>
         <option value="python">Python</option>
         <option value="ruby">Ruby</option>
+        <option value="rust">Rust</option>
         <option value="typescript">Typescript</option>
       </optgroup>
     </select>
