improve the code

--- a/src/ui.html
+++ b/src/ui.html
@@ -4,7 +4,7 @@
     <select name="select-format" id="select-format">
       <optgroup label="Common">
         <option value="json">JSON</option>
-        <!-- <option value="html">HTML</option> -->
+        <option value="html">HTML</option>
         <option value="markdown">Markdown</option>
         <option value="yaml">YAML</option>
       </optgroup>
