fix function colors

--- a/src/ui.html
+++ b/src/ui.html
@@ -3,8 +3,8 @@
     <label for="select-format">Choose the format:</label>
     <select name="select-format" id="select-format">
       <optgroup label="Common">
-        <option value="json">JS2ON</option>
-        <option value="html">HTM3L</option>
+        <option value="json">JSON</option>
+        <option value="html">HTML</option>
         <option value="markdown">Markdown</option>
         <option value="yaml">YAML</option>
       </optgroup>
