added support to Lua, Haskell and GraphQL

--- a/src/ui.html
+++ b/src/ui.html
@@ -15,9 +15,12 @@
       </optgroup>
       <optgroup label="Scripting">
         <option value="go">Go</option>
+        <option value="graphql">GraphQL</option>
+        <option value="haskell">Haskell</option>
         <option value="java">Java</option>
         <option value="javascript">Javascript</option>
         <option value="kotlin">Kotlin</option>
+        <option value="lua">Lua</option>
         <option value="python">Python</option>
         <option value="ruby">Ruby</option>
         <option value="rust">Rust</option>
