--- a/src/ui.html
+++ b/src/ui.html
@@ -1,79 +1,90 @@
-<div class="form">
-  <div class="field">
-    <label for="select-format">Choose the format:</label>
-    <select name="select-format" id="select-format">
-      <optgroup label="Common">
-        <option value="json">JSON</option>
-        <option value="html">HTML</option>
-        <option value="markdown">Markdown</option>
-        <option value="yaml">YAML</option>
-      </optgroup>
-      <optgroup label="CSS">
-        <option value="css">CSS</option>
-        <option value="less">Less</option>
-        <option value="scss">SCSS</option>
-      </optgroup>
-      <optgroup label="Scripting">
-        <option value="go">Go</option>
-        <option value="graphql">GraphQL</option>
-        <option value="haskell">Haskell</option>
-        <option value="java">Java</option>
-        <option value="javascript">Javascript</option>
-        <option value="kotlin">Kotlin</option>
-        <option value="lua">Lua</option>
-        <option value="python">Python</option>
-        <option value="ruby">Ruby</option>
-        <option value="rust">Rust</option>
-        <option value="typescript">Typescript</option>
-      </optgroup>
-    </select>
-  </div>
-  <div class="field">
-    <label for="select-theme">Choose the theme:</label>
-    <select name="select-theme" id="select-theme">
-      <option value="a11y-dark">A 11 Y Dark</option>
-      <option value="a11y-light">A 11 Y Light</option>
-      <option value="android-studio">Android Studio</option>
-      <option value="atom-one-dark">Atom One Dark</option>
-      <option value="atom-one-light">Atom One Light</option>
-      <option selected value="default">Default</option>
-      <option value="dracula">Dracula</option>
-      <option value="ocean">Ocean</option>
-      <option value="github">Github</option>
-      <option value="github-dark">Github Dark</option>
-      <option value="material">Material</option>
-      <option value="material-darker">Material Darker</option>
-      <option value="material-palenight">Material Palenight</option>
-      <option value="monokai-sublime">Monokai Sublime</option>
-      <option value="paraiso-dark">Paraiso Dark</option>
-      <option value="paraiso-light">Paraiso Light</option>
-      <option value="solarized-dark">Solarized Dark</option>
-      <option value="solarized-light">Solarized Light</option>
-      <option value="vs">Vs</option>
-      <option value="vs2015">Vs 2015</option>
-      <option value="xcode">Xcode</option>
-      <option value="xt256">XT 256</option>
-    </select>
-  </div>
-</div>
-
-<div class="divider"></div>
-
-<div class="compare" id="compare">
-  <div class="original">
-    <p>Original</p>
-    <pre><code id="original-content"></code></pre>
-    <div id="original-error">
-      <pre><code></code></pre>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Format Code</title>
+  </head>
+  <body>
+    <div class="form">
+      <div class="field">
+        <label for="select-format">Choose the format:</label>
+        <select name="select-format" id="select-format">
+          <optgroup label="Common">
+            <option value="json">JSON</option>
+            <option value="html">HTML</option>
+            <option value="markdown">Markdown</option>
+            <option value="yaml">YAML</option>
+          </optgroup>
+          <optgroup label="CSS">
+            <option value="css">CSS</option>
+            <option value="less">Less</option>
+            <option value="scss">SCSS</option>
+          </optgroup>
+          <optgroup label="Scripting">
+            <option value="go">Go</option>
+            <option value="graphql">GraphQL</option>
+            <option value="haskell">Haskell</option>
+            <option value="java">Java</option>
+            <option value="javascript">Javascript</option>
+            <option value="kotlin">Kotlin</option>
+            <option value="lua">Lua</option>
+            <option value="python">Python</option>
+            <option value="ruby">Ruby</option>
+            <option value="rust">Rust</option>
+            <option value="typescript">Typescript</option>
+          </optgroup>
+        </select>
+      </div>
+      <div class="field">
+        <label for="select-theme">Choose the theme:</label>
+        <select name="select-theme" id="select-theme">
+          <option value="a11y-dark">A 11 Y Dark</option>
+          <option value="a11y-light">A 11 Y Light</option>
+          <option value="android-studio">Android Studio</option>
+          <option value="atom-one-dark">Atom One Dark</option>
+          <option value="atom-one-light">Atom One Light</option>
+          <option selected value="default">Default</option>
+          <option value="dracula">Dracula</option>
+          <option value="ocean">Ocean</option>
+          <option value="github">Github</option>
+          <option value="github-dark">Github Dark</option>
+          <option value="material">Material</option>
+          <option value="material-darker">Material Darker</option>
+          <option value="material-palenight">Material Palenight</option>
+          <option value="monokai-sublime">Monokai Sublime</option>
+          <option value="paraiso-dark">Paraiso Dark</option>
+          <option value="paraiso-light">Paraiso Light</option>
+          <option value="solarized-dark">Solarized Dark</option>
+          <option value="solarized-light">Solarized Light</option>
+          <option value="vs">Vs</option>
+          <option value="vs2015">Vs 2015</option>
+          <option value="xcode">Xcode</option>
+          <option value="xt256">XT 256</option>
+        </select>
+      </div>
     </div>
-  </div>
-  <div class="preview">
-    <p>Preview</p>
-    <pre><code id="preview-content"></code></pre>
-  </div>
-</div>
-<div class="buttons">
-  <button id="button-preview" class="button button--secondary">Preview</button>
-  <button id="button-apply" class="button button--primary">Apply</button>
-</div>
 
+    <div class="divider"></div>
+
+    <div class="compare" id="compare">
+      <div class="original">
+        <p>Original</p>
+        <pre><code id="original-content"></code></pre>
+        <div id="original-error">
+          <pre><code></code></pre>
+        </div>
+      </div>
+      <div class="preview">
+        <p>Preview</p>
+        <pre><code id="preview-content"></code></pre>
+      </div>
+    </div>
+    <div class="buttons">
+      <button id="button-preview" class="button button--secondary">Preview</button>
+      <button id="button-apply" class="button button--primary">Apply</button>
+    </div>
+
+    <script type="module" src="./ui.ts"></script>
+  </body>
+</html>
