refactor: migrate from Highlight.js to Shiki for syntax highlighting
- Updated package.json to remove Highlight.js and add Shiki as a dependency.
- Refactored highlight.ts to implement Shiki's syntax highlighting, including fine-grained theme and language imports.
- Modified format-code.ts to support additional formats with Shiki.
- Removed unused Highlight.js SCSS files and styles.
- Updated UI to reflect new theme options and styles for Shiki.
- Adjusted UI logic to handle asynchronous highlighting and theme application.

--- a/src/ui.html
+++ b/src/ui.html
@@ -39,28 +39,33 @@
       <div class="field">
         <label for="select-theme">Choose the theme:</label>
         <select name="select-theme" id="select-theme">
-          <option value="a11y-dark">A 11 Y Dark</option>
-          <option value="a11y-light">A 11 Y Light</option>
-          <option value="android-studio">Android Studio</option>
-          <option value="atom-one-dark">Atom One Dark</option>
-          <option value="atom-one-light">Atom One Light</option>
-          <option selected value="default">Default</option>
-          <option value="dracula">Dracula</option>
-          <option value="ocean">Ocean</option>
-          <option value="github">Github</option>
-          <option value="github-dark">Github Dark</option>
-          <option value="material">Material</option>
-          <option value="material-darker">Material Darker</option>
-          <option value="material-palenight">Material Palenight</option>
-          <option value="monokai-sublime">Monokai Sublime</option>
-          <option value="paraiso-dark">Paraiso Dark</option>
-          <option value="paraiso-light">Paraiso Light</option>
-          <option value="solarized-dark">Solarized Dark</option>
-          <option value="solarized-light">Solarized Light</option>
-          <option value="vs">Vs</option>
-          <option value="vs2015">Vs 2015</option>
-          <option value="xcode">Xcode</option>
-          <option value="xt256">XT 256</option>
+          <optgroup label="Dark">
+            <option value="dracula">Dracula</option>
+            <option value="github-dark">GitHub Dark</option>
+            <option selected value="dark-plus">Dark Plus (VS Code)</option>
+            <option value="material-theme-darker">Material Darker</option>
+            <option value="material-theme-ocean">Material Ocean</option>
+            <option value="material-theme-palenight">Material Palenight</option>
+            <option value="monokai">Monokai</option>
+            <option value="nord">Nord</option>
+            <option value="one-dark-pro">One Dark Pro</option>
+            <option value="solarized-dark">Solarized Dark</option>
+            <option value="min-dark">Min Dark</option>
+            <option value="catppuccin-mocha">Catppuccin Mocha</option>
+            <option value="vitesse-dark">Vitesse Dark</option>
+            <option value="tokyo-night">Tokyo Night</option>
+            <option value="rose-pine">Rosé Pine</option>
+            <option value="ayu-dark">Ayu Dark</option>
+          </optgroup>
+          <optgroup label="Light">
+            <option value="github-light">GitHub Light</option>
+            <option value="light-plus">Light Plus (VS Code)</option>
+            <option value="one-light">One Light</option>
+            <option value="solarized-light">Solarized Light</option>
+            <option value="min-light">Min Light</option>
+            <option value="catppuccin-latte">Catppuccin Latte</option>
+            <option value="vitesse-light">Vitesse Light</option>
+          </optgroup>
         </select>
       </div>
     </div>
