feat: add font selection feature and update UI for monospace fonts

--- a/src/ui.html
+++ b/src/ui.html
@@ -8,7 +8,7 @@
   <body>
     <div class="form">
       <div class="field">
-        <label for="select-format">Choose the format:</label>
+        <label for="select-format">Format:</label>
         <select name="select-format" id="select-format">
           <optgroup label="Common">
             <option value="json">JSON</option>
@@ -37,7 +37,7 @@
         </select>
       </div>
       <div class="field">
-        <label for="select-theme">Choose the theme:</label>
+        <label for="select-theme">Theme:</label>
         <select name="select-theme" id="select-theme">
           <optgroup label="Dark">
             <option value="dracula">Dracula</option>
@@ -66,6 +66,12 @@
             <option value="catppuccin-latte">Catppuccin Latte</option>
             <option value="vitesse-light">Vitesse Light</option>
           </optgroup>
+        </select>
+      </div>
+      <div class="field">
+        <label for="select-font">Font:</label>
+        <select name="select-font" id="select-font">
+          <option value="">Loading fonts...</option>
         </select>
       </div>
     </div>
