feat: update monospace font handling and improve error display in UI

--- a/src/ui.html
+++ b/src/ui.html
@@ -82,14 +82,15 @@
       <div class="original">
         <p>Original</p>
         <pre><code id="original-content"></code></pre>
-        <div id="original-error">
-          <pre><code></code></pre>
-        </div>
       </div>
       <div class="preview">
         <p>Preview</p>
         <pre><code id="preview-content"></code></pre>
       </div>
+    </div>
+    <div id="original-error">
+        <p>Error parsing original content. Please ensure the content is valid or you selected the correct format and try again.</p>
+        <pre><code></code></pre>
     </div>
     <div class="buttons">
       <button id="button-preview" class="button button--secondary">Preview</button>
