feat: add line numbers support to code highlighting and UI

--- a/src/ui.html
+++ b/src/ui.html
@@ -74,6 +74,12 @@
           <option value="">Loading fonts...</option>
         </select>
       </div>
+      <div class="field field-checkbox">
+        <label for="checkbox-line-numbers">
+          <input type="checkbox" id="checkbox-line-numbers" name="checkbox-line-numbers" />
+          Line numbers
+        </label>
+      </div>
     </div>
 
     <div class="divider"></div>
@@ -85,7 +91,7 @@
       </div>
       <div class="preview">
         <p>Preview</p>
-        <pre><code id="preview-content"></code></pre>
+        <div id="preview-content"></div>
       </div>
     </div>
     <div id="original-error">
